[project]
name = "YASE"
version = "0.1.0"
description = "A simple Adobe Swatch Exchange (.ase) file editor and converter."
authors = [{ name = "Alex Bold aka Swasher", email = "mr.swasher@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"



dependencies = [
    "colormath>=3.0.0",
    "pyinstaller>=6.14.2",
    "swatch>=0.4.0",
]
