[project]
name = "YASE"
version = "1.1.0"
description = "A simple Adobe Swatch Exchange (.ase) file editor and converter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colormath>=3.0.0",
    "pyinstaller>=6.14.2",
    "swatch>=0.4.0",
]


[tool.bumpversion]
current_version = "1.1.0"
commit = true
tag = true
message = "bump version: {current_version} → {new_version}"
[[tool.bumpversion.file_patterns]]
path = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'
[[tool.bumpversion.file_patterns]]
path = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
